# anime-etl

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  logging_config.yaml  pipeline.py  pyproject.toml  test.py  test_extract_manual.py
queries/: anilist_trending.graphql
src/: config.py  extract.py  load.py  logger.py  transform.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_extract.py  test_load.py  test_logger.py  test_transform.py
