[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anime-etl"
version = "0.1.0"
description = "Pipeline ETL Anime & Manga Intelligence - Data Engineering Project A1"
requires-python = ">=3.13"

dependencies = [
    # Data manipulation
    "pandas==2.3.3",

    # HTTP requests (Jikan REST API)
    "requests==2.32.4",

    # PostgreSQL driver
    "psycopg2-binary==2.9.10",

    # ORM + connexion PostgreSQL clean
    "sqlalchemy==2.0.41",

    # Variables d'environnement
    "python-dotenv==1.1.1",

    # Fuzzy matching pour déduplication des titres anime
    "rapidfuzz==3.13.0",

    # GraphQL client pour AniList API
    "graphql-core==3.2.6",

    # Data quality checks (Great Expectations)
    "great-expectations==1.4.5",

    # Handling retry for api calls
    "tenacity==9.1.0",

    # Handling API ratelimit
    "ratelimit==2.2.1",
]

[project.optional-dependencies]
dev = [
    # Tests
    "pytest==8.4.2",
    "pytest-cov==6.2.1",

    # Linting & type checking
    "flake8==7.2.0",
    "mypy==1.16.0",

    # Types stubs pour mypy
    "types-requests==2.32.4.20250611",
    "pandas-stubs==2.3.0.250703",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__", "data/"]
