[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anime-etl"
version = "0.1.0"
description = "Pipeline ETL Anime & Manga Intelligence - Data Engineering Project A1"
requires-python = ">=3.13"

dependencies = [
    # Data manipulation
    "pandas==2.3.3",

    # HTTP requests (Jikan REST API)
    "requests==2.32.4",

    # PostgreSQL driver
    "psycopg2-binary==2.9.11",

    # ORM and clean PostgreSQL connections
    "sqlalchemy==2.0.41",

    # Environment variables
    "python-dotenv==1.1.1",

    # Fuzzy matching for anime title deduplication
    "rapidfuzz==3.13.0",

    # GraphQL client for AniList API
    "graphql-core==3.2.6",

    # Data quality checks (Great Expectations)
    "great-expectations==1.10.0",

    # Retry logic for API calls
    "tenacity==9.1.2",

    # API rate limiting
    "ratelimit==2.2.1",

    # Read logger configuration file
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    # Tests
    "pytest==8.4.2",
    "pytest-cov==6.3.0",

    # Linting & type checking
    "flake8==7.2.0",
    "mypy==1.18.2",

    # Type stubs for mypy
    "types-requests==2.32.4.20250611",
    "pandas-stubs==2.3.2.250926",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = "--cov=src --cov-report=term-missing --cov-report=html"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__", "data/"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "pytest-mock>=3.15.1",
    "types-pyyaml>=6.0.12.20250915",
]
